# EbookLanguageLearning

./: .gitignore  README.md  app.py  index.html  main.py  pyproject.toml
.github/workflows/: main.yml
chat/: ollama_client.py  routes.py  word_service.py
js/: chapter-navigation.js  chat-modal.js  library.js  toc.js  word-interaction.js
styles/: chapter-navigation.css  interactive.css  library.css  style.css  toc.css
