[project]
name = "ebooklanguagelearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "ebooklib>=0.19",
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "spacy>=3.8.7",
    "es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "ollama>=0.5.3",
]

[dependency-groups]
dev = [
    "marimo>=0.15.2",
]
